--- a/University/WebContent/WEB-INF/template.xhtml
+++ b/University/WebContent/WEB-INF/template.xhtml
@@ -3,18 +3,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:f="http://java.sun.com/jsf/core">
+	  xmlns:f="http://java.sun.com/jsf/core"
+	  xmlns:p="http://primefaces.org/ui">
 <head>
   <title><ui:insert name="title">Default title</ui:insert></title>
+  <style type="text/css">
+  .ui-menuitem   {mouseover: #ff0000; background-color: #A80000 !important; background: red;}
+</style>
 </head>
 
 <body>
-<ui:debug hotkey="x" rendered="#{initParam['javax.faces.FACELETS_DEVELOPMENT']}"/>
 
 <div id="header">
     <ui:insert name="header">
-		Put header here.
-	
+    
+<h:form>  
+  
+<p:menubar>
+<p:submenu label="Options">
+<p:menuitem value="Save" url="http://www.primefaces.org"/>
+<p:menuitem value="Update" url="http://www.primefaces.org"/>
+<p:menuitem value="Navigate" url="http://www.primefaces.org"/>
+</p:submenu>
+</p:menubar>
+  
+</h:form>  
 		
     </ui:insert>
 </div>
