gui/entity updates

--- a/University/WebContent/WEB-INF/template.xhtml
+++ b/University/WebContent/WEB-INF/template.xhtml
@@ -5,30 +5,16 @@
       xmlns:h="http://java.sun.com/jsf/html"
 	  xmlns:f="http://java.sun.com/jsf/core"
 	  xmlns:p="http://primefaces.org/ui">
-<head>
+<h:head>
   <title><ui:insert name="title">Default title</ui:insert></title>
-  <style type="text/css">
-  .ui-menuitem   {mouseover: #ff0000; background-color: #A80000 !important; background: red;}
-</style>
-</head>
+
+</h:head>
 
 <body>
 
 <div id="header">
     <ui:insert name="header">
-    
-<h:form>  
-  
-<p:menubar>
-<p:submenu label="Options">
-<p:menuitem value="Save" url="http://www.primefaces.org"/>
-<p:menuitem value="Update" url="http://www.primefaces.org"/>
-<p:menuitem value="Navigate" url="http://www.primefaces.org"/>
-</p:submenu>
-</p:menubar>
-  
-</h:form>  
-		
+    Header here.
     </ui:insert>
 </div>
 
