--- a/University/WebContent/Admin/menu.xhtml
+++ b/University/WebContent/Admin/menu.xhtml
@@ -17,7 +17,9 @@
 	            <p:menuitem value="University" action="#{adminMenuBean.setPage('/Admin/addUniv.xhtml')}" update=":mainContentForm:mainContentPanel" />
 	            <p:menuitem value="Department" action="#{adminMenuBean.setPage('/Admin/addDept.xhtml')}" update=":mainContentForm:mainContentPanel" />
 	            <p:menuitem value="Program" action="#{adminMenuBean.setPage('/Admin/addProgram.xhtml')}" update=":mainContentForm:mainContentPanel" />
+	             <p:menuitem value="Course" action="#{adminMenuBean.setPage('/Admin/addCourse.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
 	            <p:menuitem value="Student" action="#{adminMenuBean.setPage('/Admin/addStudent.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
+	            <p:menuitem value="Professor" action="#{adminMenuBean.setPage('/Admin/addProfessor.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
             </p:submenu>
             <p:submenu label="Delete">        	
 	            <p:menuitem value="University" action="#{adminMenuBean.setPage('/Admin/delUniv.xhtml')}" update=":mainContentForm:mainContentPanel" />
