--- a/University/WebContent/Student/menu.xhtml
+++ b/University/WebContent/Student/menu.xhtml
@@ -14,9 +14,9 @@
     <p:panelMenu style="width:100%">
         
         	<p:submenu label="Registration">        	
-	            <p:menuitem value="View Courses" action="#{studentMenuBean.setPage('/Student/courseDataTable.xhtml')}" update=":mainContentForm:mainContentPanel" />
-	            <p:menuitem value="Add/Drop Classes" action="#{studentMenuBean.setPage('/Student/registerPage1.xhtml')}" update=":mainContentForm:mainContentPanel" />
-	            <p:menuitem value="View/Print Schedule" action="#{studentMenuBean.setPage('/Student/addProgram.xhtml')}" update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="View Courses" action="#{studentMenuBean.setPage('/Student/viewCourseDataTable.xhtml')}" update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="Add/Drop Classes" action="#{studentMenuBean.setPage('/Student/registration.xhtml')}" actionListener="#{tableBean.setStep('1')}" update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="View/Print Schedule" action="#{studentMenuBean.setPage('/Student/viewClassSchedule.xhtml')}" actionListener="#{tableBean.setStep('1')}" update=":mainContentForm:mainContentPanel" />
 	        </p:submenu>
             <p:submenu label="Gradebook">        	
 	            <p:menuitem value="View Grades" action="#{studentMenuBean.setPage('/Student/delUniv.xhtml')}" update=":mainContentForm:mainContentPanel" />
