--- a/University/WebContent/Student/showClassSchedulePage1.xhtml
+++ b/University/WebContent/Student/showClassSchedulePage1.xhtml
@@ -8,8 +8,8 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition>
-
-			<h:panelGrid columns="2">	
+	
+				<h:panelGrid columns="2">	
 			<p:selectOneMenu value="#{tableBean.student_ssn}" var="student">
 	     	   <f:selectItems value="#{tableBean.students}" var="stud" itemLabel="#{stud.first_name} #{stud.last_name}" itemValue="#{stud.ssn}" />
 	     	   <p:column>
@@ -24,9 +24,10 @@
 	     	   </p:column>
 	     	</p:selectOneMenu>
 	     	
-	     	<p:commandButton  value="Next >>" ajax="true" action="#{tableBean.setStep('2')}" update=":mainContentForm:mainContentPanel" >
+	     	<p:commandButton  value="Next >>" ajax="true" action="#{tableBean.populateRegisteredClasses}" actionListener="#{tableBean.setStep('2')}" update=":mainContentForm:mainContentPanel" >
+	     
 	     	</p:commandButton>
 	     </h:panelGrid>
-
+ 	
 </ui:composition>
 </html>
