--- a/University/WebContent/Admin/menu.xhtml
+++ b/University/WebContent/Admin/menu.xhtml
@@ -20,6 +20,7 @@
 	            <p:menuitem value="Program" action="#{adminMenuBean.setPage('/Admin/addProgram.xhtml')}" update=":mainContentForm:mainContentPanel" />
 	             <p:menuitem value="Course" action="#{adminMenuBean.setPage('/Admin/addCourse.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
 	             <p:menuitem value="Session" action="#{adminMenuBean.setPage('/Admin/addSession.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
+	             <p:menuitem value="Text" action="#{adminMenuBean.setPage('/Admin/addText.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
 	            <p:menuitem value="Student" action="#{adminMenuBean.setPage('/Admin/addStudent.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
 	            <p:menuitem value="Professor" action="#{adminMenuBean.setPage('/Admin/addProfessor.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
             </p:submenu>
