--- a/University/WebContent/Student/CourseSchedulePage2.xhtml
+++ b/University/WebContent/Student/CourseSchedulePage2.xhtml
@@ -10,15 +10,15 @@
 <ui:composition>
 	
 	<p:fieldset legend="Class Schedule">  
-		<p:dataTable id="registration" value="#{tableBean.registeredFor}" var="reg" rowKey="#{reg.clazz.course_id}"
-		selectionMode="single" selection="#{tableBean.selectedRegistration}">
+		<p:dataTable id="registration" value="#{registrationBean.registeredFor}" var="reg" rowKey="#{reg.course.course_id}"
+		selectionMode="single" selection="#{registrationBean.selectedRegistration}">
 						
 			<p:column headerText="Semester">
 				<h:outputText value="#{reg.sezzion.semesteryear}"/>
 			</p:column>
 		
 			<p:column headerText="Class">
-				<h:outputText value="#{reg.clazz.name}"/>
+				<h:outputText value="#{reg.course.name}"/>
 			</p:column>
 					
 			<p:column headerText="Day of Week">
@@ -37,7 +37,7 @@
 	</p:fieldset>
 	<br></br>
 	<br></br>
-	<p:commandButton value="Drop Selected Class" action="#{tableBean.doDropRegistration}" update=":mainContentForm:registration" >
+	<p:commandButton value="Drop Selected Class" action="#{registrationBean.doDropRegistration}" update=":mainContentForm:registration" >
 	
 	</p:commandButton>
 	
