--- a/University/WebContent/Student/TextbookPage1.xhtml
+++ b/University/WebContent/Student/TextbookPage1.xhtml
@@ -8,7 +8,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition>
-	
+	<h1>Required Textbooks</h1>
 				<h:panelGrid columns="2">	
 			<p:selectOneMenu value="#{textBean.student_ssn}" var="student">
 	     	   <f:selectItems value="#{textBean.students}" var="stud" itemLabel="#{stud.first_name} #{stud.last_name}" itemValue="#{stud.ssn}" />
