--- a/University/WebContent/Student/menu.xhtml
+++ b/University/WebContent/Student/menu.xhtml
@@ -14,15 +14,15 @@
     <p:panelMenu style="width:100%">
         
         	<p:submenu label="Registration">        	
-	            <p:menuitem value="View Courses" action="#{studentMenuBean.setPage('/Student/viewCourseDataTable.xhtml')}" update=":mainContentForm:mainContentPanel" />
-	            <p:menuitem value="Register for Classes" action="#{studentMenuBean.setPage('/Student/registration.xhtml')}" actionListener="#{tableBean.setStep('1')}" update=":mainContentForm:mainContentPanel" />
-	            <p:menuitem value="View/Drop Classes" action="#{studentMenuBean.setPage('/Student/viewClassSchedule.xhtml')}" actionListener="#{tableBean.setStep('1')}" update=":mainContentForm:mainContentPanel" />
-	            <p:menuitem value="View Textbooks" action="#{studentMenuBean.setPage('/Student/showTextbooks.xhtml')}" update=":mainContentForm:mainContentPanel"/>
+	            <p:menuitem value="View Courses" action="#{studentMenuBean.setPage('/Student/CourseDataTable.xhtml')}" update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="Register for Classes" action="#{studentMenuBean.setPage('/Student/Registration.xhtml')}" actionListener="#{registrationBean.setStep('1')}" update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="View/Drop Classes" action="#{studentMenuBean.setPage('/Student/CourseSchedule.xhtml')}" actionListener="#{registrationBean.setStep('1')}" update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="View Textbooks" action="#{studentMenuBean.setPage('/Student/Textbooks.xhtml')}" update=":mainContentForm:mainContentPanel"/>
 	        </p:submenu>
             <p:submenu label="Gradebook">        	
-	            <p:menuitem value="View Grades" action="#{studentMenuBean.setPage('/Student/delUniv.xhtml')}" update=":mainContentForm:mainContentPanel" />
-	            <p:menuitem value="Print Report" action="#{studentMenuBean.setPage('/Student/delDept.xhtml')}" update=":mainContentForm:mainContentPanel" />
-	            <p:menuitem value="Request Transcript" action="#{studentMenuBean.setPage('/Student/delStudent.xhtml')}"  update=":mainContentForm:mainContentPanel"  />
+	            <p:menuitem value="View Grades"  update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="Print Report" update=":mainContentForm:mainContentPanel" />
+	            <p:menuitem value="Request Transcript" update=":mainContentForm:mainContentPanel"  />
             </p:submenu>
      	    </p:panelMenu>
 
