--- a/University/WebContent/Student/header.xhtml
+++ b/University/WebContent/Student/header.xhtml
@@ -8,6 +8,6 @@
 	xmlns:p="http://primefaces.org/ui">
 	
 <ui:composition>
-	Add a Student header here.
+	<h:graphicImage value="/resources/images/Banner_png.PNG"/>
 </ui:composition>
 </html>
