--- a/University/WebContent/Admin/menu.xhtml
+++ b/University/WebContent/Admin/menu.xhtml
@@ -12,7 +12,7 @@
     <p:growl id="messages" autoUpdate="true"/>
 
     <p:panelMenu style="width:100%">
-        <p:submenu label="CRUD Operations">
+        <p:submenu label="Admin Operations">
         	<p:submenu label="Create">        	
 	            <p:menuitem value="Add Default App Data" action="#{applicationBean.createDefaultData}"></p:menuitem>
 	            <p:menuitem value="University" action="#{adminMenuBean.setPage('/Admin/addUniv.xhtml')}" update=":mainContentForm:mainContentPanel" />
